--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -185,10 +185,13 @@
   font-size: 1.6em;
   font-weight: bold;
   padding: 15px;
-  background-color: #f0f4ff;  /* soft blue */
-  border-left: 6px solid #007acc;  /* accent stripe */
+  background-color: #f0f4ff;
+  border-left: 6px solid #007acc;
+  border-right: 6px solid #007acc;   /* added right border */
   margin-top: 30px;
+  text-align: center;
 }
+
 
 
 .landing-grid {
